Added adenylation view.

--- a/mean/public/modules/steps/views/adenylation.client.view.html
+++ b/mean/public/modules/steps/views/adenylation.client.view.html
@@ -1,46 +1,41 @@
 <section data-ng-controller="StepsController">
 	<div class="boxed text-center">
-		<h3>End Repair and Phosphorylation</h3>
+		<h3>Adenylation</h3>
 		<h4>Procedure:</h4>
 		<table class="table table-striped">
 			<tr>
-				<td>1. Scan the plate barcode</td>
+				<td>1. Scan barcode</td>
 			</tr>
 			<tr>
-				<td>2. Vortex plates</td>
+				<td>2.<b>ROBOT:</b>Cleanup</td>
 			</tr>
 			<tr>
-				<td>3. Scan barcode</td>
+				<td>3. Prepare the master mix with the reagents below, for the 
+				number of SAMPLES = </td>
 			</tr>
 			<tr>
 				<td>4. Turn on Thermocycler and program it with the following 
-				profile (File "End Phos:")
+				profile (File "Adenylat:")
 				<p>
 				4a. Hot
-				<p>
-				4b. Cold 
 				<p>
 				** Pre-set the thermocycler: Start the prgoram, then immediately pause it.
 				</td>
 			</tr>
 			<tr>
-				<td>5. Prepare the mastermix with the reagents below, for the number
-				of SAMPLES =</td>
+				<td>5. <b>ROBOT:</b>Grand_MM_Dispense</td>
 			</tr>
 			<tr>
-				<td>6. <b>Robot:</b> EndRepair_Phosphorylation</td> 
+				<td>6. Place plate in</td>
 			</tr>
 			<tr>
 				<td>7. Cover plate with a foil lid, vortex for 5s, and splin for 15s</td>
 			</tr>
 			<tr>
-				<td>8. ??? </td>
+				<td>8. Place in the pre-set thermocycler, and click <b>Run</b> (or <b>Play</b>)</td>
 			</tr>
 			<tr>
-				<td>9. Place in the pre-set thermocycler, and click <b>Run</b> (or <b>Play</b>)</td>
-			</tr>
-			<tr>
-				<td>10. After program is done, proceed to clean-up</td>
+				<td>9. Remove reagents from the -20 freezer and allow them to thaw in ice</td>
 			</tr>
 			<tr>
 				<td>
