Added Hybridization view.

--- a/mean/public/modules/steps/views/hybridization.client.view.html
+++ b/mean/public/modules/steps/views/hybridization.client.view.html
@@ -1,10 +1,16 @@
 <section data-ng-controller="StepsController">
 	<div class="boxed text-center">
-		<h3>Sample Pooling</h3>
+		<h3>Hybridization</h3>
 		<h4>Procedure:</h4>
 		<table class="table table-striped">
 			<tr>
-				<td>1. <b>ROBOT: </b></td>
+				<td>1. ??? </td>
+			</tr>
+			<tr>
+				<td>2. ??? </td>
+			</tr>
+			<tr>
+				<td>3. Scan PROBE BOX barcode</td>
 			</tr>
 			<tr>
 				<td>
