Added numberOfSamples field to the steps.client.controller.js

--- a/mean/public/modules/steps/views/adenylation.client.view.html
+++ b/mean/public/modules/steps/views/adenylation.client.view.html
@@ -11,7 +11,7 @@
 			</tr>
 			<tr>
 				<td>3. Prepare the master mix with the reagents below, for the 
-				number of SAMPLES = </td>
+				number of SAMPLES = {{numberOfSamples}}</td>
 			</tr>
 			<tr>
 				<td>4. Turn on Thermocycler and program it with the following 
