--- a/mean/public/modules/steps/views/end-repair.client.view.html
+++ b/mean/public/modules/steps/views/end-repair.client.view.html
@@ -25,7 +25,7 @@
 			</tr>
 			<tr>
 				<td>5. Prepare the mastermix with the reagents below, for the number
-				of SAMPLES =</td>
+				of SAMPLES = {{numberOfSamples}}</td>
 			</tr>
 			<tr>
 				<td>6. <b>Robot:</b> EndRepair_Phosphorylation</td> 
