--- a/mean/public/modules/steps/views/ligation.client.view.html
+++ b/mean/public/modules/steps/views/ligation.client.view.html
@@ -14,7 +14,7 @@
 			</tr>
 			<tr>
 				<td>4. Prepare the master mix with the reagents below, for the number of
-				SAMPLES = </td> 
+				SAMPLES = {{numberOfSamples}}</td> 
 			</tr>
 			<tr>
 				<td>5. Turn on the Thermocycler, and program it with the following thermal profile
