--- a/mean/public/modules/steps/views/pcr-enrichment.client.view.html
+++ b/mean/public/modules/steps/views/pcr-enrichment.client.view.html
@@ -12,7 +12,7 @@
 			</tr>
 			<tr>
 				<td>3. Prepare the master mix with the reagents below in a 1.7 mL tube, for the 
-				number of SAMPLES = </td>
+				number of SAMPLES = {{numberOfSamples}}</td>
 			</tr>
 			<tr>
 				<td>4. ??? </td>
