Adding dialog popup to all step pages

--- a/mean/public/modules/steps/views/hybridization.client.view.html
+++ b/mean/public/modules/steps/views/hybridization.client.view.html
@@ -1,5 +1,5 @@
 <section data-ng-controller="StepsController">
-	<div class="boxed text-center">
+	<div class="boxed text-center" ng-class="grayOut ? 'gray-out' : ''" ng-disabled="grayOut">
 		<h3>Hybridization</h3>
 		<h4>Procedure:</h4>
 		<table class="table table-striped">
