--- a/mean/public/modules/steps/views/ligation.client.view.html
+++ b/mean/public/modules/steps/views/ligation.client.view.html
@@ -1,5 +1,5 @@
 <section data-ng-controller="StepsController">
-	<div class="boxed text-center">
+	<div class="boxed text-center" ng-class="grayOut ? 'gray-out' : ''" ng-disabled="grayOut">
 		<h3>Adaptor Ligation</h3>
 		<h4>Procedure:</h4>
 		<table class="table table-striped">
@@ -14,7 +14,7 @@
 			</tr>
 			<tr>
 				<td>4. Prepare the master mix with the reagents below, for the number of
-				SAMPLES = {{numberOfSamples}}</td> 
+				SAMPLES = {{numberOfSamples}}</td>
 			</tr>
 			<tr>
 				<td>5. Turn on the Thermocycler, and program it with the following thermal profile
@@ -45,8 +45,8 @@
 			</tr>
 			<tr>
 				<td>
-					<button class="btn btn-primary" ng-click="incrementPlates()">
-					    Confirm
+					<button class="btn btn-primary" ng-click="grayOut = true;" ng-dialog="modules/core/templates/popupdialog.client.view.html" ng-dialog-controller="StepsController">
+						Confirm
 					</button>
 				</td>
 			</tr>
