--- a/mean/public/modules/steps/views/adenylation.client.view.html
+++ b/mean/public/modules/steps/views/adenylation.client.view.html
@@ -1,5 +1,5 @@
 <section data-ng-controller="StepsController">
-	<div class="boxed text-center">
+	<div class="boxed text-center" ng-class="grayOut ? 'gray-out' : ''" ng-disabled="grayOut">
 		<h3>Adenylation</h3>
 		<h4>Procedure:</h4>
 		<table class="table table-striped">
@@ -10,11 +10,11 @@
 				<td>2.<b>ROBOT:</b>Cleanup</td>
 			</tr>
 			<tr>
-				<td>3. Prepare the master mix with the reagents below, for the 
+				<td>3. Prepare the master mix with the reagents below, for the
 				number of SAMPLES = {{numberOfSamples}}</td>
 			</tr>
 			<tr>
-				<td>4. Turn on Thermocycler and program it with the following 
+				<td>4. Turn on Thermocycler and program it with the following
 				profile (File "Adenylat:")
 				<p>
 				4a. Hot
@@ -39,8 +39,8 @@
 			</tr>
 			<tr>
 				<td>
-					<button class="btn btn-primary" ng-click="incrementPlates()">
-					    Confirm
+					<button class="btn btn-primary" ng-click="grayOut = true;" ng-dialog="modules/core/templates/popupdialog.client.view.html" ng-dialog-controller="StepsController">
+						Confirm
 					</button>
 				</td>
 			</tr>
