--- a/mean/public/modules/steps/views/end-repair.client.view.html
+++ b/mean/public/modules/steps/views/end-repair.client.view.html
@@ -1,5 +1,5 @@
 <section data-ng-controller="StepsController">
-	<div class="boxed text-center">
+	<div class="boxed text-center" ng-class="grayOut ? 'gray-out' : ''" ng-disabled="grayOut">
 		<h3>End Repair and Phosphorylation</h3>
 		<h4>Procedure:</h4>
 		<table class="table table-striped">
@@ -13,12 +13,12 @@
 				<td>3. Scan barcode</td>
 			</tr>
 			<tr>
-				<td>4. Turn on Thermocycler and program it with the following 
+				<td>4. Turn on Thermocycler and program it with the following
 				profile (File "End Phos:")
 				<p>
 				4a. Hot
 				<p>
-				4b. Cold 
+				4b. Cold
 				<p>
 				** Pre-set the thermocycler: Start the prgoram, then immediately pause it.
 				</td>
@@ -28,7 +28,7 @@
 				of SAMPLES = {{numberOfSamples}}</td>
 			</tr>
 			<tr>
-				<td>6. <b>Robot:</b> EndRepair_Phosphorylation</td> 
+				<td>6. <b>Robot:</b> EndRepair_Phosphorylation</td>
 			</tr>
 			<tr>
 				<td>7. Cover plate with a foil lid, vortex for 5s, and splin for 15s</td>
@@ -44,8 +44,8 @@
 			</tr>
 			<tr>
 				<td>
-					<button class="btn btn-primary" ng-click="incrementPlates()">
-					    Confirm
+					<button class="btn btn-primary" ng-click="grayOut = true;" ng-dialog="modules/core/templates/popupdialog.client.view.html" ng-dialog-controller="StepsController">
+						Confirm
 					</button>
 				</td>
 			</tr>
