--- a/mean/public/modules/steps/views/library-quantification.client.view.html
+++ b/mean/public/modules/steps/views/library-quantification.client.view.html
@@ -2,7 +2,7 @@
 	<div class="boxed text-center">
 		<h3>Library Quantification</h3>
 		<h4>Procedure:</h4>
-		<table class="table table-striped">
+		<table class="table table-striped" ng-class="grayOut ? 'gray-out' : ''" ng-disabled="grayOut">
 			<tr>
 				<td>1. Add standards to plate wells using automated pipette</td>
 			</tr>
@@ -33,8 +33,8 @@
 			</tr>
 			<tr>
 				<td>
-					<button class="btn btn-primary" ng-click="incrementPlates()">
-					    Confirm
+					<button class="btn btn-primary" ng-click="grayOut = true;" ng-dialog="modules/core/templates/popupdialog.client.view.html" ng-dialog-controller="StepsController">
+						Confirm
 					</button>
 				</td>
 			</tr>
