--- a/mean/public/modules/steps/views/hybridization.client.view.html
+++ b/mean/public/modules/steps/views/hybridization.client.view.html
@@ -14,8 +14,8 @@
 			</tr>
 			<tr>
 				<td>
-					<button class="btn btn-primary" ng-click="incrementPlates()">
-					    Confirm
+					<button class="btn btn-primary" ng-click="grayOut = true;" ng-dialog-close-previous ng-dialog="modules/core/templates/popupdialog.client.view.html" ng-dialog-controller="StepsController">
+						Confirm
 					</button>
 				</td>
 			</tr>
