--- a/mean/public/modules/worklist/css/worklist.css
+++ b/mean/public/modules/worklist/css/worklist.css
@@ -1,14 +1,8 @@
 .boxed{
     position: relative;
-    margin-top: 5px;
+    margin-top: 10px;
     border: 1px solid #A3A3A3;
     clear: both;
-}
-
-.performButton{
-    position: absolute;
-    right: 10px;
-    top: 15px;
 }
 
 .aPlate:hover{
@@ -16,12 +10,20 @@
     cursor: pointer;
 }
 
+.performButton{
+    float: right;
+}
+
 .boxed table tr:not(:first-child):nth-child(odd):hover td{
     background: #dbdbdb;
 }
 
+.boxed table tr:not(:first-child):nth-child(odd):hover .removeButton{
+    background: #dd4444 !important;
+}
+
 h3{
-    margin-left: 5px;
+    display: inline !important;
 }
 
 td{
@@ -30,25 +32,16 @@ td{
     vertical-align: middle;
 }
 
-.doneButton:hover{
+.stageHeader{
+    margin-top: 3px;
+    margin-left: 0.1px;
+}
+
+a:hover{
     cursor: pointer;
 }
 
-.removePlatesButton{
-    padding: 3px 0 3px 0;
-    float: right;
-    position: relative;
-}
-
-.removePlatesButton:hover{
-    cursor: pointer;
-}
-
-.removePlatesImage{
-    float: right;
-    position: relative;
-}
-
-.selectAllButton:hover{
-    cursor: pointer;
+.removeButton{
+    background: #dd4444;
+    color: white;
 }
