--- a/mean/public/modules/worklist/css/worklist.css
+++ b/mean/public/modules/worklist/css/worklist.css
@@ -1,56 +1,105 @@
-.boxed{
-    position: relative;
-    margin-top: 10px;
-    border: 1px solid #A3A3A3;
-    clear: both;
-}
-
-.data{
-    border: 1px solid #A3A3A3;
-    text-align: center;
-}
-
-.aPlate:hover{
-    background: #dbdbdb;
-    cursor: pointer;
-}
-
-.performButton{
-    float: right;
-}
-
-.boxed table tr:not(:first-child):nth-child(odd):hover td{
-    background: #dbdbdb;
-}
-
-.boxed table tr:not(:first-child):nth-child(odd):hover .removeButton{
-    background: #dd4444 !important;
-}
-
 h3{
     display: inline !important;
-}
-
-td{
-    text-align: center;
-    horiz-align: center;
-    vertical-align: middle;
-}
-
-.stageHeader{
-    margin-top: 3px;
-    margin-left: 0.1px;
 }
 
 a:hover{
     cursor: pointer;
 }
 
+.stageHeader{
+    border-top: 1px solid #A3A3A3;
+    border-right: 1px solid #A3A3A3;
+    border-left: 1px solid #A3A3A3;
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+
+.platesHeader{
+    border-top: 1px solid #ddd;
+    border-right: 1px solid #A3A3A3;
+    border-left: 1px solid #A3A3A3;
+    border-spacing: 0;
+    border-collapse: collapse;
+    text-align: center;
+    horiz-align: center;
+    vertical-align: middle;
+}
+
+.heading{
+    padding: 8px;
+    display: block;
+}
+
+.aPlate{
+    border-top: 1px solid #ddd;
+    border-right: 1px solid #A3A3A3;
+    border-left: 1px solid #A3A3A3;
+}
+
+.aPlate:hover{
+    background-color: #f5f5f5;
+    cursor: pointer;
+}
+
+.data{
+    text-align: center;
+    horiz-align: center;
+    vertical-align: middle;
+    padding: 8px;
+}
+
+.performButton{
+    float: right;
+}
+
 .removeButton{
     background: #dd4444;
     color: white;
+    text-align: center;
+    horiz-align: center;
+    vertical-align: middle;
+    padding: 8px;
 }
 
-.table{
-    margin-bottom: 0;
+.row.aPlate:last-of-type{
+    border-bottom: 1px solid #A3A3A3;
+    border-left: 1px solid #A3A3A3;
+    border-right: 1px solid #A3A3A3;
+}
+
+.stageBody .row:nth-child(odd){
+    background: #f9f9f9;
+}
+
+.stageBody .row:nth-child(odd):hover{
+    background-color: #f5f5f5;
+}
+
+/*
+site that helped solve transition problem:
+http://www.ng-newsletter.com/advent2013/#!/day/11#transitions
+*/
+.row.aPlate.ng-leave{
+    -webkit-transition:all ease 0.3s;
+    -moz-transition:all ease 0.3s;
+    -o-transition:all ease 0.3s;
+    transition:all ease 0.3s;
+    overflow: hidden;
+    visibility: hidden;
+}
+
+/*
+(what the element will animate from)
+*/
+.row.aPlate.ng-leave{
+    max-height: 40px;
+    opacity: 1;
+}
+
+/*
+(what the element will animate towards))
+*/
+.row.aPlate.ng-leave.ng-leave-active{
+    max-height: 0;
+    opacity: 0;
 }
