Added decrement functionality only for admin position.
Also added a Plate Information page, with links to the project.

I'd like to add the 9x12 Plate Diagram on this page at the bottom, was
going to see what everyone else thought.

--- a/mean/public/modules/worklist/css/worklist.css
+++ b/mean/public/modules/worklist/css/worklist.css
@@ -50,6 +50,11 @@ a:hover{
     color: white;
 }
 
+.revertButton{
+    background: #0000FF;
+    color: white;
+}
+
 .table{
     margin-bottom: 0;
 }
