--- a/mean/public/modules/plates/views/list-plates.client.view.html
+++ b/mean/public/modules/plates/views/list-plates.client.view.html
@@ -26,6 +26,7 @@
     <div class="ngdialog-buttons">
         <button type="button" class="ngdialog-button ngdialog-button-primary" data-ng-click="addPlate()">Add Plate</button>
         <button type="button" class="ngdialog-button ngdialog-button-secondary" data-ng-click="closeDialog()">Cancel</button>
+        <button type="button" class="ngdialog-button ngdialog-button-secondary" data-ng-click="viewSelectedPlate()">View Plate Info</button>
     </div>
 </script>
 <script type="text/ng-template" id="errorDialog">
