Added an error message to html should the user not be authorized to decrement a plate.

--- a/mean/public/modules/plates/views/view-plate.client.view.html
+++ b/mean/public/modules/plates/views/view-plate.client.view.html
@@ -51,6 +51,9 @@
 					</button>
             	</div>
 	    	</div>
+		    <div data-ng-show="errorMessage" class="text-danger text-center">
+				   <strong	data-ng-bind="errorMessage"></strong> 
+		    </div>
 	    </div>
     </div>
 </section>
