--- a/mean/public/modules/projects/css/projects.css
+++ b/mean/public/modules/projects/css/projects.css
@@ -132,3 +132,64 @@
 .bs-callout table tr:not(:first-child):nth-child(odd):hover td{
     background: #dbdbdb;
 }
+
+.boxed{
+    position: relative;
+    margin-top: 10px;
+    border: 1px solid #A3A3A3;
+    clear: both;
+}
+
+.box{
+    border: 1px solid #A3A3A3;
+}
+
+.aPlate:hover{
+    background: #dbdbdb;
+    cursor: pointer;
+}
+
+.performButton{
+    float: right;
+}
+
+.boxed table tr:not(:first-child):nth-child(odd):hover td{
+    background: #dbdbdb;
+}
+
+.boxed table tr:not(:first-child):nth-child(odd):hover .removeButton{
+    background: #dd4444 !important;
+}
+
+h3{
+    display: inline !important;
+}
+
+td{
+    text-align: center;
+    horiz-align: center;
+    vertical-align: middle;
+}
+
+.stageHeader{
+    margin-top: 3px;
+    margin-left: 0.1px;
+}
+
+a:hover{
+    cursor: pointer;
+}
+
+.removeButton{
+    background: #dd4444;
+    color: white;
+}
+
+.revertButton{
+    background: #0000FF;
+    color: white;
+}
+
+.table{
+    margin-bottom: 0;
+}
